# MusicWorld

./: .gitignore  CMakeLists.txt
Harmony/: CMakeLists.txt
Harmony/include/: Chord.hpp  ChordFactory.hpp  ChordType.hpp  Interval.hpp  IntervalFactory.hpp  MajorTriad.hpp  MinorTriad.hpp  PitchClass.hpp  Triad.hpp
Harmony/src/: MajorTriad.cpp  MinorTriad.cpp
Runner/: CMakeLists.txt  Runner  Runner.cpp
